--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "astro-paper",
   "version": "4.7.0",
   "private": false,
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "sync": "astro sync",
     "astro": "astro",
     "format:check": "prettier --check . --plugin=prettier-plugin-astro",
     "format": "prettier --write . --plugin=prettier-plugin-astro",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "update-hashes": "node scripts/update-hashes.js"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
@@ -19,6 +20,7 @@
     "@resvg/resvg-js": "^2.6.2",
     "astro": "^4.16.3",
     "fuse.js": "^7.0.0",
+    "js-yaml": "^4.1.0",
     "lodash.kebabcase": "^4.1.1",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
@@ -32,6 +34,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/github-slugger": "^1.3.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash.kebabcase": "^4.1.9",
     "@types/react": "^18.3.6",
     "@typescript-eslint/parser": "^8.5.0",
