--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Copy config file
-        run: echo "${{ vars.WEDDING_CONFIG }}" > wedding-config.yaml 2>/dev/null
+        run: |
+          echo "::add-mask::${{ vars.WEDDING_CONFIG }}"
+          echo "${{ vars.WEDDING_CONFIG }}" > wedding-config.yaml
+      
 
       - name: Install, build, and upload your site
         uses: withastro/action@v3
