--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Copy config file
-        env:
-          CONFIG_CONTENT: ${{ vars.WEDDING_CONFIG }}
         run: |
-          echo "::add-mask::$CONFIG_CONTENT"
-          echo "$CONFIG_CONTENT" > wedding-config.yaml
-      
-      
+          cat << 'EOF' > wedding-config.yaml >/dev/null 2>&1
+          ${{ vars.WEDDING_CONFIG }}
+          EOF      
 
       - name: Install, build, and upload your site
         uses: withastro/action@v3
