--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Copy config file
-        run: |
-          echo "${{ vars.WEDDING_CONFIG }}" > wedding-config.yaml 2>/dev/null >/dev/null
+        shell: bash
+        run: set +x; echo "${{ vars.WEDDING_CONFIG }}" > wedding-config.yaml >/dev/null 2>&1
 
       - name: Install, build, and upload your site
         uses: withastro/action@v3
