--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,15 @@ jobs:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
 
-      - name: Copy config file
+      - name: Mask multiline env
         run: |
-          echo "${{ vars.WEDDING_CONFIG_ENCODED }}" | base64 -d > wedding-config.yaml
+          while read -r line;
+          do
+            echo "::add-mask::${line}"
+          done <<< "${{ vars.WEDDING_CONFIG }}"
+
+      - name: Copy config file
+        run: echo "${{ vars.WEDDING_CONFIG }}" > wedding-config.yaml
 
       - name: Install, build, and upload your site
         uses: withastro/action@v3
