--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Mask multiline env
-        run: |
-          while read -r line;
-          do
-            echo "::add-mask::${line}"
-          done <<< "${{ vars.WEDDING_CONFIG }}"
+        env:
+          local_secret: ${{ secrets.WEDDING_CONFIG }}
+        run: echo $local_secret | sed 's/^ */::add-mask::/'
 
       - name: Copy config file
         run: echo "${{ vars.WEDDING_CONFIG }}" > wedding-config.yaml
