--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint .",
     "update-hashes": "node scripts/update-hashes.js",
     "update-config": "npm run update-hashes && node scripts/update-github-variable.js",
-    "deploy": "npm run update-hashes && node scripts/trigger-deployment.js"
+    "deploy": "npm run update-config && node scripts/trigger-deployment.js"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
